<resources>
    <string name="app_name">KUMO云</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="app_backup">应用备份</string>
    <string name="mail_backup">短信备份</string>
    <string name="meesage_backup">短信备份</string>
    <string name="app_name_check">应用名称</string>
    <string name="app_size_check">应用大小</string>
    <string name="app_pakegename_check">应用包名</string>
    <string name="app_sourceDir_check">apk路径</string>
    <string name="action_check_list_of_apk">已提取的apk文件</string>
    <string name="contact_backup">联系人备份</string>
    <string name="pic_backup">图片备份</string>
    <string name="xml_sms_text">生成xml文件</string>
    <string name="upload_sms_text">上传</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="download_text">下载</string>
    <string name="setting">设置</string>
    <string name="exit">退出</string>
    <string name="delete">删除</string>
    <string name="restore_infos">恢复</string>
    <string name="select_pic">选择图片</string>
    <string name="xml_file_name">文件名</string>
    <string name="xml_file_size">文件大小</string>
    <string name="xml_file_create_time">文件创建时间</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="phone_login">使用短信验证码登录</string>
    <string name="third_party_login">第三方登录</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="sms_code">验证码</string>
    <string name="new_account">新账号</string>
    <string name="confirm_password">确认密码</string>
    <string name="phone_number">手机号</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="no_password_login">免密码登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="backup_file_key">文件key</string>
</resources>
