<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mypc.cloudstorage.activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/Input_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@+id/app_name_title"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Input_account">

            <EditText
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account"
                android:inputType="textAutoCorrect"
                android:maxLength="10"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Input_password"
            android:layout_below="@+id/Input_account">
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:maxLength="10" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/register_buttons"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="33dp"
        android:layout_alignParentEnd="true">
        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="0.5"
            android:text="@string/login"
            android:id="@+id/login_button"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:backgroundTint="@color/white"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="0.5"
            android:text="@string/regist"
            android:id="@+id/register_button"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:backgroundTint="@color/white"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView_icon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@mipmap/icon"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Clouding"
        android:textSize="24sp"
        android:gravity="center"
        android:id="@+id/app_name_title"
        android:layout_below="@+id/imageView_icon"
        android:layout_alignParentStart="true"
        android:layout_margin="16dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:id="@+id/forget_password"
        android:gravity="right"
        android:layout_marginTop="16dp"
        android:textSize="12sp"
        android:padding="4dp"
        android:layout_below="@+id/Input_layout"
        android:layout_alignEnd="@+id/Input_layout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_party_login"
        android:gravity="left"
        android:layout_marginTop="16dp"
        android:textSize="12sp"
        android:padding="4dp"
        android:layout_below="@+id/Input_layout"
        android:layout_alignStart="@+id/Input_layout" />

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_close_black_24dp"
        android:layout_margin="16dp"
        android:id="@+id/close_app" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_password_login"
        android:id="@+id/no_password_login"
        android:layout_marginRight="16dp"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_alignTop="@+id/close_app"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
