<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mypc.cloudstorage.activities.ImageBackupActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_shower"
        android:src="@drawable/hint_no_pic"
        android:layout_gravity="center"/>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fab_menu_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        fab:fab_addButtonColorNormal="@color/colorAccent"
        fab:fab_icon="@drawable/ic_add_24dp"
        fab:fab_labelStyle="@style/menu_labels_style"
        fab:fab_labelsPosition="left">
    <com.getbase.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fab_upload_image"
        fab:fab_colorNormal="@color/colorAccent"
        fab:fab_size="mini"
        fab:fab_icon="@drawable/ic_cloud_upload_24dp"
        fab:fab_title="@string/upload_sms_text"/>
    <com.getbase.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fab_download_image"
        fab:fab_colorNormal="@color/colorAccent"
        fab:fab_size="mini"
        fab:fab_icon="@drawable/ic_cloud_download_black_24dp"
        fab:fab_title="@string/download_text"/>
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fab_add_pic"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_size="mini"
            fab:fab_icon="@drawable/ic_menu_camera"
            fab:fab_title="@string/select_pic"/>
</com.getbase.floatingactionbutton.FloatingActionsMenu>

</android.support.design.widget.CoordinatorLayout>
