<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linear_no_password_login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:layout_gravity="left"
            android:id="@+id/cancel_no_password_login"
            android:src="@drawable/ic_close_black_24dp"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_alignTop="@+id/cancel_no_password_login"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:id="@+id/confirm_no_password_login"
            android:src="@drawable/ic_check_black_24dp"/>
    </RelativeLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Input_phone"
        android:layout_margin="8dp">
        <EditText
            android:id="@+id/no_password_login_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="11" />
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <EditText
            android:id="@+id/no_password_login_sms_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sms_code"
            android:maxLines="1"
            android:maxLength="10"
            android:layout_weight="0.5"
            android:inputType="number"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/get_sms_code"
            android:textColor="@color/white"
            android:id="@+id/no_password_get_sms_code"/>
    </LinearLayout>
</LinearLayout>