<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:overScrollMode="never"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mypc.cloudstorage.activities.MainActivity"
    tools:showIn="@layout/app_bar_main">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/Re_mail_backup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:clickable="true">

                <ImageView
                    android:id="@+id/img_mail_Backup"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_mail_24dp" />

                <TextView
                    android:id="@+id/title_mail_Backup"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignEnd="@+id/img_mail_Backup"
                    android:layout_alignStart="@+id/img_mail_Backup"
                    android:layout_below="@+id/img_mail_Backup"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/mail_backup" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/Re_contact_backup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3">

                <ImageView
                    android:id="@+id/img_contact_Backup"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_person_pin_24dp" />

                <TextView
                    android:id="@+id/title_contact_Backup"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_below="@+id/img_contact_Backup"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/contact_backup"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/Re_app_backup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3">

                <ImageView
                    android:id="@+id/img_app_Backup"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_apps_24dp" />

                <TextView
                    android:id="@+id/title_app_Backup"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignEnd="@+id/img_app_Backup"
                    android:layout_alignStart="@+id/img_app_Backup"
                    android:layout_below="@+id/img_app_Backup"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/app_backup" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/Re_pic_backup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3">

                <ImageView
                    android:id="@+id/img_pic_Backup"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_photo_library_24dp" />

                <TextView
                    android:id="@+id/title_pic_Backup"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignEnd="@+id/img_pic_Backup"
                    android:layout_alignStart="@+id/img_pic_Backup"
                    android:layout_below="@+id/img_pic_Backup"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/pic_backup" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/Re_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3">

                <ImageView
                    android:id="@+id/img_setting"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_settings_24dp" />

                <TextView
                    android:id="@+id/title_setting"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignEnd="@+id/img_setting"
                    android:layout_alignStart="@+id/img_setting"
                    android:layout_below="@+id/img_setting"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/setting" />
            </RelativeLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/Re_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3">

                <ImageView
                    android:id="@+id/img_exit"
                    android:layout_width="80dp"
                    android:layout_height="96dp"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_exit_to_app_24dp" />

                <TextView
                    android:id="@+id/title_exit"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignEnd="@+id/img_exit"
                    android:layout_alignStart="@+id/img_exit"
                    android:layout_below="@+id/img_exit"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/exit" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
